Fix z-index for header to not overlap sidebar modal

--- a/assets/scss/_select.scss
+++ b/assets/scss/_select.scss
@@ -90,6 +90,9 @@
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
   cursor: not-allowed;
 }
+.open.dropdown-menu {
+  z-index: 1003;
+}
 .open > .dropdown-menu {
   display: block;
 }
