--- a/assets/scss/pages/invoice.scss
+++ b/assets/scss/pages/invoice.scss
@@ -509,7 +509,7 @@
   position: fixed;
   left: 0;
   right: 0;
-  z-index: 10000;
+  z-index: 1005;
   background-color: #ffffff;
   box-shadow: 0 8px 50px 0 rgba(63, 77, 96, 0.4), 0 5px 5px 0 rgba(63, 77, 96, 0.05);
 
