--- a/assets/scss/pages/pay.scss
+++ b/assets/scss/pages/pay.scss
@@ -504,7 +504,7 @@ ol.list_styled {
     left: auto;
     right: 0;
     background-color: #fff;
-    z-index: 1000;
+    z-index: 1005;
     max-width: 100%;
     display: none;
 
