--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -187,7 +187,7 @@ tbody.collapse.in {
 
 .header {
   border-bottom: 1px solid $border-alt;
-  z-index: 1100;
+  z-index: 1005;
 }
 
 .error_page {
